<resources>
    <string name="app_name">DIE Karteikartenapp</string>
    <string name="register">Registrieren</string>
    <string name="no_acc">Du hast noch kein Konto?</string>
    <string name="login">Anmelden</string>
    <string name="pw_forgott">Passwort vergessen?</string>
    <string name="username">Benutzername</string>
    <string name="password">Passwort</string>
    <string name="change_pwd">Passwort ändern</string>
    <string name="abort">Abbruch</string>
    <string name="change">Ändern</string>
    <string name="email">E-Mail</string>
    <string name="create">Erstellen</string>
    <string name="createDeck">Stapel erstellen</string>
    <string name="addCard">Karte hinzufügen</string>
    <string name="yourDecks">Deine Stapel</string>



</resources>