<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/stackPreviewTitle"
        android:layout_width="332dp"
        android:layout_height="57dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/Titel"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.116" />

    <EditText
        android:id="@+id/editTextFilterInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stackPreviewTitle"
        app:layout_constraintVertical_bias="0.116" />

    <Button
        android:id="@+id/PasswortVergessen"
        android:layout_width="207dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/pw_forgott"
        android:textColor="@color/Primary"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login"
        app:layout_constraintVertical_bias="0.048" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="190dp"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:text="@string/no_acc"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswortVergessen"
        app:layout_constraintVertical_bias="0.109" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="158dp"
        android:layout_height="45dp"
        android:layout_marginStart="131dp"
        android:layout_marginEnd="131dp"
        android:background="#00FFFFFF"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/Primary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.054" />

    <TextView
        android:id="@+id/errorNoUser"
        android:layout_width="278dp"
        android:layout_height="35dp"
        android:layout_marginStart="66dp"
        android:layout_marginEnd="67dp"
        android:background="#F6CDCD"
        android:text="Passworteingaben stimmen nicht überein"
        android:textColor="#FB1403"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.448" />

    <Button
        android:id="@+id/Login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Primary"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.163" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="440dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        app:layout_constraintVertical_bias="0.109"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>