<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/errorNoUserReg"
        android:layout_width="278dp"
        android:layout_height="35dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="23dp"
        android:background="#F6CDCD"
        android:text="Passworteingaben stimmen nicht überein"
        android:textColor="#FB1403"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/erstellenButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EingabePasswort" />

    <TextView
        android:id="@+id/registrierungUberschrift"
        android:layout_width="214dp"
        android:layout_height="53dp"
        android:text="@string/register"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/NameEingabe"
        android:layout_width="282dp"
        android:layout_height="66dp"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/EingabeEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.302"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/EingabeEmail"
        android:layout_width="282dp"
        android:layout_height="63dp"
        android:layout_marginTop="356dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.293"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/EingabePasswort"
        android:layout_width="288dp"
        android:layout_height="65dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.298"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.669" />

    <Button
        android:id="@+id/erstellenButton"
        android:layout_width="264dp"
        android:layout_height="55dp"
        android:background="@drawable/button_shape"
        android:text="@string/create"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.403"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EingabePasswort"
        app:layout_constraintVertical_bias="0.682" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="217dp"
        android:layout_height="170dp"
        app:layout_constraintBottom_toTopOf="@+id/NameEingabe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrierungUberschrift"
        app:srcCompat="@drawable/undraw_pic_profile" />

</androidx.constraintlayout.widget.ConstraintLayout>